@@ -9,6 +9,9 @@
 ## IntelliJ IDEA ( https://www.jetbrains.com/idea/
 ##
 ## In order to setup JavaFX project, follow the instruction on this link: (https://openjfx.io/openjfx/docs/#introduction)
+#
+#For VM options : --module-path "path-to-openjfx-lib-foler" --add-modules javafx.controls,javafx.fxml
+#
 
 
 ![](images/01.JPG)
